Add ports monitoring
